# plantrs

./: .gitignore  Cargo.toml  cabal.project  flake.nix
.github/workflows/: haskell_ci.yaml  rust_ci.yml
esp32c3/: Cargo.toml  cfg.toml.example  flake.nix  rust-toolchain.toml
esp32c3/.cargo/: config.toml
esp32c3/src/: http.rs  main.rs  mqtt.rs  wifi.rs
src/: blink.rs  main.rs  mqtt.rs
web/: .gitignore  README.md  config.yaml.example  flake.nix  justfile  plantrs.cabal
web/src/: Api.hs  ApiType.hs  Commands.hs  Config.hs  Database.hs  Discovery.hs  HttpApi.hs  Main.hs  Models.hs  MqttApi.hs  Schedule.hs  Server.hs  View.hs
web/src/Views/: Common.hs  Detail.hs  Overview.hs
web/ui/: index.html  main.css
