cabal-version:      2.4
name:               plantrs
version:            0.1.0.0
license:            MIT
maintainer:         themichaeleden@gmail.com
author:             Michael Eden
category:           Web
homepage:           https://github.com/illegalprime/plantrs

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

data-dir:           ui
data-files:
  *.html
  images/*.webp

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -threaded

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , aeson-casing
    , async
    , base            >=4.13.0.0 && <4.18.0.0.0
    , data-default
    , directory
    , filepath
    , http-api-data
    , monad-loops
    , mtl
    , net-mqtt
    , network-uri
    , optics-core
    , profunctors
    , random
    , relude          >=1.0
    , servant
    , servant-server
    , shower
    , time
    , wai
    , wai-cors
    , warp
    , with-utf8
    , yaml

  hs-source-dirs:     src
  default-language:   Haskell2010

executable plantrs
  import:          shared
  main-is:         Main.hs
  other-modules:
    ApiType
    Paths_plantrs

  autogen-modules: Paths_plantrs
